alignment fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,7 @@
 
 .mobCaption {
   text-align: center;
-  height: 35%;
+  height: 30%;
   /* background: red; */
   display: flex;
   flex-direction: column;
